# inventorist

./: .gitignore  README.md  pyproject.toml
bot/: bot.py  db_handler.py  db_map.py  lexicon.py
